# icp-fl-poc

./: AGENTS.md  Cargo.toml  README.md  dfx.json  tasks.md
src/: fl_canister.did  lib.rs
