[package]
name = "fl_canister"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.18.3"
ic-stable-structures = "0.6.4"

serde_json = "1.0.108"
anyhow = "1.0.75"
serde = "1"
ic-types = "0.7.0"
hex = "0.4"
aes-gcm = { version = "0.10.3", features = ["heapless"] }

